jsoup changelog

*** Release 1.6.2 [PENDING]
 * Added jsoup.connect.cookies(Map) method, to set multiple cookies at once, possibly from a prior request.

 * Added Element.textNodes() and Element.dataNodes(), to easily access an element's children text nodes and data nodes.

 * Added an example program that demonstrates how to format HTML as plain-text, and the use of the NodeVisitor interface.
 
 * Updated jsoup.connect so that when requests made as POSTs are redirected, the redirect is followed as a GET.
   <https://github.com/jhy/jsoup/issues/120>

 * Updated the Cleaner and whitelists to optionally preserve related links in elements, instead of converting them
   to absolute links.

 * Updated the Cleaner to support custom allowed protocols such as "cid:" and "data:".
   <https://github.com/jhy/jsoup/issues/127>

 * Fixed handling of null characters within comments.
   <https://github.com/jhy/jsoup/issues/121>

 * Tweaked escaped entity detection in attributes to not treat &entity_... as an entity form.
   <https://github.com/jhy/jsoup/issues/129>

 * Fixed doctype tokeniser to allow whitespace between name and public identifier.

 * Tweaked HTML output of closing script and style tags to not add an extraneous newline when pretty-printing.

*** Release 1.6.1 [2011-Jul-02]
 * Fixed Java 1.5 compatibility.
   <https://github.com/jhy/jsoup/issues/103>

 * Fixed an issue when parsing <script> tags in body where the tokeniser wouldn't switch to the InScript state, which
   meant that data wasn't parsed correctly.
   <https://github.com/jhy/jsoup/issues/104>

 * Fixed an issue with a missing quote when serialising DocumentType nodes.
   <https://github.com/jhy/jsoup/issues/109>

 * Fixed issue where a single 0 character was lexed incorrectly as a null character.
   <https://github.com/jhy/jsoup/issues/107>

 * Fixed normalisation of carriage returns to newlines on input HTML.
   <https://github.com/jhy/jsoup/issues/110>
