@@ -3,6 +3,7 @@ package org.jsoup.nodes;
 import org.jsoup.Jsoup;
 import org.jsoup.TextUtil;
 import org.jsoup.parser.Tag;
+import org.jsoup.select.NodeVisitor;
 import org.junit.Test;
 
 import static org.junit.Assert.*;
@@ -151,5 +152,20 @@ public class NodeTest {
         Node node = span.unwrap();
         assertEquals("<div>One  Two</div>", TextUtil.stripNewlines(doc.body().html()));
         assertTrue(node == null);
+    }
+
+    @Test public void traverse() {
+        Document doc = Jsoup.parse("<div><p>Hello</p></div><div>There</div>");
+        final StringBuilder accum = new StringBuilder();
+        doc.select("div").first().traverse(new NodeVisitor() {
+            public void head(Node node, int depth) {
+                accum.append("<" + node.nodeName() + ">");
+            }
+
+            public void tail(Node node, int depth) {
+                accum.append("</" + node.nodeName() + ">");
+            }
+        });
+        assertEquals("<div><p><#text></#text></p></div>", accum.toString());
     }
 }
